# HiDMoA

./: LICENSE  README copy.md  README.md  config.py  data  pyproject.toml
configs/: environment-mmlab.yml  hidmoa_env_example.sh  requirements-mmlab.txt
examples/: run_hidmoa.py
src/hidmoa/: __init__.py  check_data.py  cli.py  config.py  data.py  generators.py  logger.py  main.py  metrics.py  models.py  prepare_class_folders.py  profiling.py  train.py  train_full.py
src/hidmoa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
